# AISellsAgent

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  test_graph.py
app/: config.py  main.py
app/agents/: escalation.py  graph.py  orchestrator.py  order.py  state.py  stock_catalog.py  supervisor.py
app/models/: schemas.py
app/prompts/: escalation_agent.yaml  loader.py  orchestrator.yaml  order_agent.yaml  stock_catalog_agent.yaml  supervisor.yaml
app/services/: chatwoot.py  database.py
app/tools/: database.py  drive.py
app/webhooks/: chatwoot.py
scripts/: auth_google.py
