[project]
name = "aisalesagent"
version = "0.1.0"
description = "AI-powered WhatsApp sales agent built with LangGraph + Claude"
requires-python = ">=3.11"

dependencies = [
    # Web server
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",

    # LangChain / LangGraph
    "langchain>=0.2.0",
    "langchain-core>=0.2.0",
    "langchain-anthropic>=0.1.15",
    "langchain-google-community>=1.0.0",
    "google-api-python-client>=2.0.0",
    "google-auth>=2.0.0",
    "google-auth-oauthlib>=1.0.0",
    "langgraph>=0.2.0",
    "langgraph-checkpoint-postgres>=1.0.0",

    # Database
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "psycopg[binary]>=3.1.0",

    # HTTP client
    "httpx>=0.27.0",

    # Config
    "pydantic-settings>=2.2.0",

    # Prompts
    "pyyaml>=6.0.0",

    # Env loading
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]
